fix: shifting labels, only allow hit once, enable wrong

--- a/src/style.css
+++ b/src/style.css
@@ -157,4 +157,6 @@ footer.title-screen {
 
 .eval-label {
   padding: 0 10px;
+  font-size: 10px;
+  min-width: 64px;
 }
